force-app/main/default/objects/Product__c/fields/MSP__c.field-meta.xml
<CustomField>
    <fullName>MSP__c</fullName>
    <label>MSP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>