force-app/main/default/objects/Product__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TILES</fullName>
            </value>
            <value>
                <fullName>ROOF TILES</fullName>
            </value>
            <value>
                <fullName>ADHESIVES</fullName>
            </value>
            <value>
                <fullName>FITTINGS</fullName>
            </value>
            <value>
                <fullName>GLASS BRICK</fullName>
            </value>
            <value>
                <fullName>LIGHTS</fullName>
            </value>
            <value>
                <fullName>NATURAL STONE</fullName>
            </value>
            <value>
                <fullName>SANITARY</fullName>
            </value>
            <value>
                <fullName>SURFACE CARE</fullName>
            </value>
            <value>
                <fullName>WOODEN TILES</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>