force-app/main/default/objects/Product__c/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <label>Product Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>