force-app/main/default/objects/Product__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <defaultValue>18</defaultValue>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>