force-app/main/default/objects/Product__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Square Feet (sq. ft)</fullName>
            </value>
            <value>
                <fullName>Square Meter (sq. m)</fullName>
            </value>
            <value>
                <fullName>Square Yard (sq. yd)</fullName>
            </value>
            <value>
                <fullName>Cubic Feet (cu. ft)</fullName>
            </value>
            <value>
                <fullName>Cubic Meter (cu. m)</fullName>
            </value>
            <value>
                <fullName>Kilogram (kg)</fullName>
            </value>
            <value>
                <fullName>Metric Ton (MT)</fullName>
            </value>
            <value>
                <fullName>Pound (lb)</fullName>
            </value>
            <value>
                <fullName>Piece (pc)</fullName>
            </value>
            <value>
                <fullName>Slab</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Feet (ft)</fullName>
            </value>
            <value>
                <fullName>Meter (m)</fullName>
            </value>
            <value>
                <fullName>Inches (in)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>